[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/bomb.png" type="Texture" id=1]
[ext_resource path="res://Bomb.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.5066
height = 34.3049

[node name="Bomb" type="RigidBody2D" groups=[
"Bomb",
]]
rotation = -0.785398
collision_layer = 4
collision_mask = 74
mass = 10.0
gravity_scale = 5.0
contact_monitor = true
can_sleep = false
angular_velocity = 1.6
applied_torque = 1.0
script = ExtResource( 2 )

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( 1, -1 )
rotation = -0.785398
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 0 )
rotation = -0.785398
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, -1 )
rotation = -0.785398
shape = SubResource( 1 )

[node name="ExplosionPosition" type="Position2D" parent="."]
position = Vector2( 20.4525, 20.1056 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
